# nvrhi-unittest

./: CMakeLists.txt  CMakePresets.json  README.md  app.cpp  cli.cpp  cli_app.h  cli_webgpu.cpp  helper.cpp  helper.h  main.cpp  metal.h  metal.mm  util.cpp  util.h
Image/: Image.cpp  Image.h
my_io/: my_io.cpp  my_io.h
native/: .clang-format  CMakeLists.txt  CMakePresets.json  cpptest.cpp
native/Image/: CMakeLists.txt  Image.cpp
native/my_io/: CMakeLists.txt  my_io.cpp  my_io.h
native/my_math/: frustum.cpp  matrix.cpp  vector.cpp
native/nvrhi-util/: nvrhi_util.cpp  nvrhi_util.h
native/scenario/: App.h  CMakeLists.txt  ChooseApp.cpp  ChooseApp.h  ChooseScenario.cpp  ChooseScenario.h  ClearBatch.cpp  ClearBatch.h  ConstantBlend.cpp  ConstantBlend.h  ConstantBuffer.cpp  ConstantBuffer.h  Copy3D.h  DepthBias.cpp  DepthBias.h  DepthBiasSlopeScale.cpp  DepthBiasSlopeScale.h  DynamicRender.cpp  DynamicRender.h  Map2DStaging.cpp  Map3DStaging.cpp  Map3DStaging.h  Map3DStagingMipMap.cpp  Map3DStagingMipMap.h  MapStagingAsync.cpp  MapStagingAsync.h  MovableTriangle.cpp  MovableTriangle.h  ReadBox.cpp  ReadBox.h  ReadExtent3D.cpp  ReadExtent3D.h  ReadOrigin3D.cpp  ReadOrigin3D.h  ReadRect.cpp  ReadRect.h  RenderPass.cpp  RenderPass.h  RenderPassClearOnly.cpp  RenderPassClearOnly.h  (+15 more)
native/scenario/include/scenario/: App.h  ChooseScenario.h  Step.h  scenario.h
native/shaders/: CMakeLists.txt  almost-white-triangle.slang  constant-buffer.slang  draw-buffer.slang  generate-geometry.slang  movable-triangle.slang  multi-target.slang  simple.slang  texture.slang  tilted-triangle.slang
native/vulkan-targets/: CMakeLists.txt  cli_vulkan.cpp
native/webgpu-targets/: CMakeLists.txt
native/webgpu-targets/webgpu-glfw-util/: metal.mm
native/webgpu-targets/webgpu-nvrhi-util/: CMakeLists.txt
native/webgpu-targets/webgpu-util/: CMakeLists.txt  webgpu-util.cpp
scenario/: App.h  CMakeLists.txt  Copy2DTexture.cpp  Copy2DTexture.h  Copy3D.cpp  Map2DStaging.cpp  Map2DStaging.h  Map3DStaging.cpp  Shader.cpp  Triangle.cpp  Triangle.h  scenario.cpp  scenario.h
scenario/include/scenario/: scenario.h
shaders/: CMakeLists.txt  shader.slang
vulkan-targets/: CMakeLists.txt  cli_vulkan.cpp
web/: CMakeLists.txt  CMakePresets.json  README.md  cli_webgpu.cpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main_glfw.cpp  sequence.cpp  sequence.html  wgpu-util.cpp  wgpu-util.h
web/Image/: Image.h
web/my_io/: my_io.cpp
web/my_math/: CMakeLists.txt  color.cpp
web/nvrhi-util/: CMakeLists.txt
web/scenario/: App.h  CMakeLists.txt  Copy2DTexture.cpp  Map2DStaging.cpp  Shader.cpp  Shader.h  scenario.cpp
web/scenario/include/scenario/: Context.h
web/wgpu-util/: CMakeLists.txt  wgpu-util.cpp
web/wgpu-util/include/: wgpu-util.h
webgpu-nvrhi-util/: webgpu-nvrhi-util.h
webgpu-targets/: CMakeLists.txt  app.cpp  cli_webgpu.cpp  glfw_app.cpp  glfw_native_app.cpp
webgpu-targets/webgpu-glfw-util/: CMakeLists.txt  webgpu-glfw-util.cpp  webgpu-glfw-util.h
webgpu-targets/webgpu-nvrhi-util/: webgpu-nvrhi-util.cpp
webgpu-util/: webgpu-util.h
